deploy/linera-application-k8s/00-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-linera-application-service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/blobs
